--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-github-repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello world</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt soluta eos consequuntur voluptatibus vitae, possimus maiores in illo aut consequatur recusandae id nulla autem maxime, tenetur, corrupti quaerat animi velit.</p>
 </body>
 </html># my-github-repo
