--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello world</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt soluta eos consequuntur voluptatibus vitae, possimus maiores in illo aut consequatur recusandae id nulla autem maxime, tenetur, corrupti quaerat animi velit.</p>
+    <p2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, earum.</p2>
 </body>
 </html># my-github-repo
